syntax = "proto3";

package test;
import "dto/user.proto";
option java_multiple_files = true;
option java_outer_classname = "GrpcUser";

service UserService{
  rpc createUser(CreateUserRequest) returns (CreateUserResponse);
  rpc getUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
}
